--- a/app/src/main/res/layout/newslist_item.xml
+++ b/app/src/main/res/layout/newslist_item.xml
@@ -28,7 +28,7 @@
                 android:text="제목"/>
 
             <TextView
-                android:id="@+id/newsItem_part"
+                android:id="@+id/newsItem_description"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
