--- a/app/src/main/res/layout/splash_activity.xml
+++ b/app/src/main/res/layout/splash_activity.xml
@@ -8,9 +8,11 @@
     <ImageView
         android:id="@+id/image0"
         android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="125dp"
+        android:layout_marginBottom="295dp"
         android:src="@drawable/newspaper"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toStartOf="@+id/image2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/image1"
@@ -18,25 +20,77 @@
         app:layout_constraintVertical_bias="0.239" />
 
     <ImageView
+        android:id="@+id/image1"
+        android:layout_width="67dp"
+        android:layout_height="67dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="164dp"
+        android:src="@drawable/rss"
+        app:layout_constraintEnd_toStartOf="@+id/image0"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/image0" />
+
+    <ImageView
         android:id="@+id/image2"
         android:layout_width="67dp"
         android:layout_height="67dp"
-        android:layout_marginTop="146dp"
+        android:layout_marginTop="160dp"
+        android:layout_marginRight="10dp"
         android:src="@drawable/internet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/image0"
         app:layout_constraintTop_toTopOf="@+id/image0" />
 
-    <ImageView
-        android:id="@+id/image1"
-        android:layout_width="67dp"
-        android:layout_height="0dp"
-        android:src="@drawable/rss"
-        app:layout_constraintBottom_toBottomOf="@+id/image2"
-        app:layout_constraintEnd_toStartOf="@+id/image0"
+
+    <TextView
+        android:id="@+id/splash_text1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="104dp"
+        android:gravity="left"
+        android:maxLines="3"
+        android:text="@string/explain1"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/image2" />
+        app:layout_constraintTop_toBottomOf="@+id/image2" />
+
+    <TextView
+        android:id="@+id/splash_text0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:maxLines="3"
+        android:text="@string/explain0"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/splash_text1"
+        app:layout_constraintStart_toStartOf="@+id/splash_text1" />
+
+    <TextView
+        android:id="@+id/splash_text2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:maxLines="3"
+        android:text="@string/explain2"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/splash_text1"
+        app:layout_constraintTop_toBottomOf="@+id/splash_text1" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="70dp"
+        android:text="@string/version"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/image0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
